# v2t

./: .gitignore  README.md  config.py  injector.py  main.py  pyproject.toml  recorder.py  sounds.py  start.sh  transcriber.py
sounds/: __init__.py
tests/: test_main.py
