[project]
name = "v2t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pynput>=1.8.1",
    "pywhispercpp>=1.4.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.7.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
